# figureout

./: .env.example  .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: publish.yml
demo/: app.py  app_mcp.py  postpone_dates.py  requirements.txt
docs/: index.html
examples/customer-support-chat/mcp-server/: .env.example  app.py  chat_mcp.py  roles.py
examples/customer-support-chat/mcp-server/data/: account_faq.json  billing_faq.json  order_faq.json
examples/customer-support-chat/webapp/: index.html  package-lock.json  package.json
examples/customer-support-chat/webapp/src/: App.jsx  Header.css  Header.jsx  api.js
examples/event-sports-booking/mcp-server/: .env.example  app.py  event_mcp.py
examples/event-sports-booking/mcp-server/data/: events.json
examples/event-sports-booking/webapp/: package-lock.json  package.json
examples/event-sports-booking/webapp/src/: App.jsx  CartContext.jsx  EventResults.css  EventResults.jsx  Header.jsx  SeatMap.css  SeatMap.jsx  api.js
examples/flight-booking/mcp-server/: .env.example  app.py  flight_mcp.py  roles.py
examples/flight-booking/mcp-server/data/: addons.json  fees.json  flight.json  seats.json
examples/flight-booking/webapp/: package-lock.json  package.json
examples/flight-booking/webapp/src/: CartContext.jsx  FlightResults.css  FlightResults.jsx  Header.css  Header.jsx  SeatMap.css  SeatMap.jsx  api.js
examples/restaurant-reservation/mcp-server/: .env.example  app.py  restaurant_mcp.py  roles.py
examples/restaurant-reservation/mcp-server/data/: addons.json  fees.json  food.json
examples/things-to-do/mcp-server/: .env.example  app.py  roles.py  thingstodo_mcp.py
examples/things-to-do/webapp/: index.html
paper/: paper.bib  paper.md
src/figureout/: __init__.py  engine.py  exceptions.py  llm.py  roles.py  utils.py
tests/: test_figureout.py
(+43 files in other folders)
