[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "figureout"
version = "0.1.1"
description = "FigureOut - a lightweight and resilient multi-LLM orchestrator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = ["fastmcp", "python-dotenv"]
authors = [
    {name = "balajeekalyan"},
]

[project.optional-dependencies]
openai  = ["openai"]
gemini  = ["google-genai", "google-api-core"]
claude  = ["anthropic"]
all     = ["openai", "anthropic", "google-genai", "google-api-core"]
dev     = ["pytest"]
